# Hephaestus

./: .env.example  .gitignore  CHANGELOG.md  README.md  ROADMAP.md  TODO.md  conftest.py  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/: copilot-instructions.md
agent/: agent.py  config.py  git_context.py  github_client.py  issue_resolver.py  memory_store.py  patch_executor.py  planner.py  repo_manager.py  repo_query.py  repo_scanner.py  repo_semantic.py  task_reasoner.py  task_report.py  test_runner.py  tools.py  watcher.py
hephaestus/: README.md  main.py
hephaestus/agent/: tools.py
prompts/: dev_agent.md
tests/: cli_test.py  config_test.py  dry_run_test.py  execute_step_test.py  git_context_test.py  github_client_test.py  integration_test.py  issue_resolver_test.py  memory_store_test.py  patch_executor_test.py  repo_manager_test.py  repo_multilang_test.py  repo_query_test.py  repo_scan_test.py  repo_semantic_cache_test.py  repo_semantic_test.py  resolve_cli_test.py  run_task_test.py  smoke_test.py  task_reasoner_test.py  task_report_test.py  test_runner_test.py  watcher_test.py
